--- a/kanji-practice.html
+++ b/kanji-practice.html
@@ -57,101 +57,104 @@
     </div>
 
     <div id="app-container">
-         <div class="app-header">
-             <a href="index.html" class="back-link"><i class="ph-bold ph-arrow-left"></i> Back to Hub</a>
-             <div class="theme-switcher-wrapper">
-                <i class="ph-bold ph-moon"></i>
-                <label class="theme-switcher">
-                    <input type="checkbox" id="theme-toggle">
-                    <span class="slider"></span>
-                </label>
-                <i class="ph-bold ph-sun"></i>
+        <!-- ADDED: main-panel to contain the app content -->
+        <div class="main-panel">
+            <div class="app-header">
+                <a href="index.html" class="back-link"><i class="ph-bold ph-arrow-left"></i> Back to Hub</a>
+                <div class="theme-switcher-wrapper">
+                    <i class="ph-bold ph-moon"></i>
+                    <label class="theme-switcher">
+                        <input type="checkbox" id="theme-toggle">
+                        <span class="slider"></span>
+                    </label>
+                    <i class="ph-bold ph-sun"></i>
+                </div>
             </div>
-        </div>
-        <div id="mode-switcher">
-            <button id="practice-mode-btn" class="active">Practice Mode</button>
-            <button id="drawing-quiz-btn">Drawing Quiz</button>
-            <button id="reading-quiz-btn">Reading Quiz</button>
-        </div>
+            <div id="mode-switcher">
+                <button id="practice-mode-btn" class="active">Practice Mode</button>
+                <button id="drawing-quiz-btn">Drawing Quiz</button>
+                <button id="reading-quiz-btn">Reading Quiz</button>
+            </div>
 
-        <div id="practice-container">
-            <div class="practice-header">
-                <h1>Kanji Tracer</h1>
-                <select id="kanji-select"></select>
+            <div id="practice-container">
+                <div class="practice-header">
+                    <h1>Kanji Tracer</h1>
+                    <select id="kanji-select"></select>
+                </div>
+                <div id="info-display">
+                    <span id="kanji-info"></span>
+                    <span id="score-info">Score: --%</span>
+                </div>
+                <div id="canvas-container">
+                    <canvas id="guideCanvas" width="300" height="300"></canvas>
+                    <canvas id="drawingCanvas" width="300" height="300"></canvas>
+                </div>
+                <div id="readings-display">
+                    <p><strong>On'yomi:</strong> <span id="on-reading"></span></p>
+                    <p><strong>Kun'yomi:</strong> <span id="kun-reading"></span></p>
+                    <p><strong>Meaning:</strong> <span id="en-meaning"></span></p>
+                </div>
+                <div id="controls">
+                    <button id="grade-button">Grade Drawing</button>
+                    <button id="clear-button">Clear</button>
+                    <button id="next-button">Next Kanji</button>
+                </div>
             </div>
-            <div id="info-display">
-                <span id="kanji-info"></span>
-                <span id="score-info">Score: --%</span>
-            </div>
-            <div id="canvas-container">
-                <canvas id="guideCanvas" width="300" height="300"></canvas>
-                <canvas id="drawingCanvas" width="300" height="300"></canvas>
-            </div>
-            <div id="readings-display">
-                <p><strong>On'yomi:</strong> <span id="on-reading"></span></p>
-                <p><strong>Kun'yomi:</strong> <span id="kun-reading"></span></p>
-                <p><strong>Meaning:</strong> <span id="en-meaning"></span></p>
-            </div>
-            <div id="controls">
-                <button id="grade-button">Grade Drawing</button>
-                <button id="clear-button">Clear</button>
-                <button id="next-button">Next Kanji</button>
-            </div>
-        </div>
 
-        <div id="drawing-quiz-container">
-            <div class="quiz-header">
-                <h1>Drawing Quiz</h1>
-                <button id="deck-status-btn">Deck Status</button>
-            </div>
-            <div id="quiz-prompt">
-                <p><strong>On'yomi:</strong> <span id="quiz-on"></span></p>
-                <p><strong>Kun'yomi:</strong> <span id="quiz-kun"></span></p>
-                <p><strong>Meaning:</strong> <span id="quiz-en"></span></p>
-            </div>
-            <div id="no-cards-message" style="display: none;">
-                <h2>All cards are in review! 🎉</h2>
-                <p>Come back later to practice some more.</p>
-            </div>
-            <div id="quiz-canvas-wrapper">
-                <div class="canvas-box">
-                    <h2>Your Answer</h2>
-                    <canvas id="quizUserCanvas" width="250" height="250"></canvas>
+            <div id="drawing-quiz-container">
+                <div class="quiz-header">
+                    <h1>Drawing Quiz</h1>
+                    <button id="deck-status-btn">Deck Status</button>
                 </div>
-                <div class="canvas-box">
-                    <h2>Correct Answer</h2>
-                    <canvas id="quizAnswerCanvas" width="250" height="250"></canvas>
+                <div id="quiz-prompt">
+                    <p><strong>On'yomi:</strong> <span id="quiz-on"></span></p>
+                    <p><strong>Kun'yomi:</strong> <span id="quiz-kun"></span></p>
+                    <p><strong>Meaning:</strong> <span id="quiz-en"></span></p>
+                </div>
+                <div id="no-cards-message" style="display: none;">
+                    <h2>All cards are in review! 🎉</h2>
+                    <p>Come back later to practice some more.</p>
+                </div>
+                <div id="quiz-canvas-wrapper">
+                    <div class="canvas-box">
+                        <h2>Your Answer</h2>
+                        <canvas id="quizUserCanvas" width="250" height="250"></canvas>
+                    </div>
+                    <div class="canvas-box">
+                        <h2>Correct Answer</h2>
+                        <canvas id="quizAnswerCanvas" width="250" height="250"></canvas>
+                    </div>
+                </div>
+                <div id="quiz-controls">
+                    <div class="quiz-main-actions">
+                        <button id="quiz-clear-btn">Clear Drawing</button>
+                        <button id="quiz-reveal-btn">Reveal Answer</button>
+                    </div>
+                    <div id="quiz-rating-buttons">
+                        <button class="rating-btn again" data-time="0">Again (0s)</button>
+                        <button class="rating-btn hard" data-time="300">Hard (5m)</button>
+                        <button class="rating-btn good" data-time="600">Good (10m)</button>
+                        <button class="rating-btn easy" data-time="1800">Easy (30m)</button>
+                    </div>
                 </div>
             </div>
-            <div id="quiz-controls">
-                <div class="quiz-main-actions">
-                    <button id="quiz-clear-btn">Clear Drawing</button>
-                    <button id="quiz-reveal-btn">Reveal Answer</button>
-                </div>
-                <div id="quiz-rating-buttons">
-                    <button class="rating-btn again" data-time="0">Again (0s)</button>
-                    <button class="rating-btn hard" data-time="300">Hard (5m)</button>
-                    <button class="rating-btn good" data-time="600">Good (10m)</button>
-                    <button class="rating-btn easy" data-time="1800">Easy (30m)</button>
-                </div>
-            </div>
-        </div>
 
-        <div id="reading-quiz-container">
-            <h1>Reading Quiz</h1>
-            <div class="hard-mode-toggle">
-                <input type="checkbox" id="hard-mode-checkbox">
-                <label for="hard-mode-checkbox">Hard Mode (Typing)</label>
-            </div>
-            <div id="reading-q-prompt-box">
-                <p id="reading-q-instruction"></p>
-                <h2 id="reading-q-prompt"></h2>
-            </div>
-            <div id="reading-q-answer-area"></div>
-            <div id="reading-q-feedback-area"></div>
-            <div id="reading-q-controls">
-                <button id="reading-q-check-btn">Check</button>
-                <button id="reading-q-next-btn" style="display: none;">Next</button>
+            <div id="reading-quiz-container">
+                <h1>Reading Quiz</h1>
+                <div class="hard-mode-toggle">
+                    <input type="checkbox" id="hard-mode-checkbox">
+                    <label for="hard-mode-checkbox">Hard Mode (Typing)</label>
+                </div>
+                <div id="reading-q-prompt-box">
+                    <p id="reading-q-instruction"></p>
+                    <h2 id="reading-q-prompt"></h2>
+                </div>
+                <div id="reading-q-answer-area"></div>
+                <div id="reading-q-feedback-area"></div>
+                <div id="reading-q-controls">
+                    <button id="reading-q-check-btn">Check</button>
+                    <button id="reading-q-next-btn" style="display: none;">Next</button>
+                </div>
             </div>
         </div>
     </div>
@@ -180,7 +183,6 @@
     </div>
 
     <div id="notification-container"></div>
-    <div id="version-number">v2.2.0</div>
     
     <script src="main.js"></script>
     <script src="kanjiscript.js"></script>
