--- a/index.html
+++ b/index.html
@@ -32,14 +32,19 @@
                     <h1>ジャパじゅく</h1>
                     <h2>JapaJuku | Final Exam Practice</h2>
                 </div>
-                <!-- Dark Mode Toggle -->
-                <div class="theme-switcher-wrapper">
-                    <i class="ph-bold ph-moon"></i>
-                    <label class="theme-switcher">
-                        <input type="checkbox" id="theme-toggle">
-                        <span class="slider"></span>
-                    </label>
-                    <i class="ph-bold ph-sun"></i>
+                <!-- Controls Wrapper -->
+                <div class="header-controls">
+                    <!-- Dark Mode Toggle -->
+                    <div class="theme-switcher-wrapper">
+                        <i class="ph-bold ph-moon"></i>
+                        <label class="theme-switcher">
+                            <input type="checkbox" id="theme-toggle">
+                            <span class="slider"></span>
+                        </label>
+                        <i class="ph-bold ph-sun"></i>
+                    </div>
+                    <!-- Settings Icon -->
+                    <i id="settings-btn" class="ph-bold ph-gear-six" title="Settings"></i>
                 </div>
             </header>
 
@@ -100,11 +105,11 @@
                         <div id="pfp-color-picker" class="hidden">
                             <div class="color-input-group">
                                 <label for="pfp-bg-color">Background</label>
-                                <input type="color" id="pfp-bg-color">
+                                <input type="color" id="pfp-bg-color" value="#007bff">
                             </div>
                             <div class="color-input-group">
                                 <label for="pfp-text-color">Letter</label>
-                                <input type="color" id="pfp-text-color">
+                                <input type="color" id="pfp-text-color" value="#ffffff">
                             </div>
                         </div>
                     </div>
@@ -125,6 +130,15 @@
                         <div id="xp-bar"></div>
                     </div>
                 </div>
+                <!-- Level Up Animation Container -->
+                <div id="level-up-animation-container">
+                    <div class="level-up-wipe"></div>
+                    <div class="level-up-text">
+                        <span>L</span><span>e</span><span>v</span><span>e</span><span>l</span>
+                        <span class="level-up-space">&nbsp;</span>
+                        <span>U</span><span>p</span><span>!</span>
+                    </div>
+                </div>
             </div>
 
             <div id="titles-container">
@@ -141,18 +155,69 @@
         <div id="welcome-popup">
             <h1>ジャパじゅくへようこそ!!</h1>
             <p class="disclaimer">
-                This website is still in very early stages of development, as a temporary measure all example "sentences" have been generated using AI (Gemini 2.5 Pro). 
-                This was built in under 24 hours so while I'm confident there shouldn't be too many mistakes I can't guarantee there won't be some, so <strong>PROCEED WITH CAUTION</strong>.
+                This website is still in early stages of development, as a temporary measure all example "sentences" have been generated using AI (Gemini 2.5 Pro). 
+                So while I'm confident there shouldn't be too many mistakes I can't guarantee there won't be some, so <strong>PROCEED WITH CAUTION</strong>.
             </p>
             <p class="disclaimer">
                 Any and all feedback would be greatly appreciated!! Message me on Discord @kakpo, send me an email wayetha@myvuw.ac.nz, or just come tell me in class
                 &lt;(￣︶￣)&gt; 
             </p>
-            <p class="disclaimer">(For ideal user-experience, use a PC or Laptop!)</p>
+            <p class="disclaimer">(For ideal user-experience, use a PC)</p>
             <div class="username-input-container">
                 <label for="username-input">Enter a username</label>
                 <input type="text" id="username-input" placeholder="e.g. 日本語マスター">
                 <button id="welcome-submit-btn" disabled>行こう!</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Settings Popup -->
+    <div id="settings-overlay" class="hidden">
+        <div id="settings-popup">
+            <div class="settings-header">
+                <h2>Settings</h2>
+                <i id="settings-close-btn" class="ph-bold ph-x"></i>
+            </div>
+            <div class="settings-content">
+                <!-- NEW: Setting for legendary name style -->
+                <div class="setting-item" id="legendary-name-setting" style="display: none;">
+                    <div class="setting-text">
+                        <h4>Legendary Name Style</h4>
+                        <p>Toggles the golden glow effect on your username.</p>
+                    </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="legendary-name-toggle">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <div class="setting-item">
+                    <div class="setting-text">
+                        <h4>Show player card everywhere</h4>
+                        <p>Displays the profile card on practice pages. Recommended for larger screens.</p>
+                    </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="show-player-card-toggle">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <div class="setting-item danger-zone">
+                     <div class="setting-text">
+                        <h4>Erase All Data</h4>
+                        <p>This will permanently delete all your progress, titles, and stats.</p>
+                    </div>
+                     <button id="erase-data-btn">Erase Data</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Confirmation Dialog -->
+    <div id="confirm-overlay" class="hidden">
+        <div id="confirm-dialog">
+            <p id="confirm-message">Are you absolutely sure? This action cannot be undone.</p>
+            <div class="confirm-buttons">
+                <button id="confirm-yes-btn">Yes, Erase Everything</button>
+                <button id="confirm-no-btn">Cancel</button>
             </div>
         </div>
     </div>
