--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JapaJuku</title>
+
+    <meta property="og:title" content="JapaJuku">
+    <meta property="og:description" content="JapaJuku | Final Exam Practice">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-live-website-url.com/">
+    <meta property="og:image" content="https://your-live-website-url.com/social-preview.svg">
     <!-- Anti-flicker theme script -->
     <script>
         (function() {
@@ -225,3 +231,4 @@
     <script src="main.js"></script>
 </body>
 </html>
+
