--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta property="og:title" content="JapaJuku">
     <meta property="og:description" content="JapaJuku | Final Exam Practice">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-live-website-url.com/">
-    <meta property="og:image" content="https://your-live-website-url.com/social-preview.svg">
+    <meta property="og:url" content="https://kakp0.github.io/JapaJuku/">
+    <meta property="og:image" content="https://kakp0.github.io/JapaJuku/social-preview.svg">
     <!-- Anti-flicker theme script -->
     <script>
         (function() {
@@ -231,4 +231,5 @@
     <script src="main.js"></script>
 </body>
 </html>
+
 
