--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     </script>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <style>
+        /* This style prevents a horizontal and vertical scrollbar from appearing */
+        html, body {
+            overflow: hidden;
+        }
+    </style>
 </head>
 <!-- The dark-mode class may be added here by the script above -->
 <body>
@@ -55,6 +61,15 @@
             </header>
 
             <div class="practice-grid">
+
+<a href="final-test-practice.html" class="practice-card">
+    <i class="ph-bold ph-file-pdf"></i>
+    <div>
+        <h3>Final Test Practice</h3>
+        <p>A digital version of the practice PDF.</p>
+    </div>
+</a>
+
                 <!-- NOTE: I've wrapped the text in a div for better mobile styling -->
                 <a href="conjugation-practice.html" class="practice-card">
                     <i class="ph-bold ph-translate"></i>
@@ -231,5 +246,4 @@
     <script src="main.js"></script>
 </body>
 </html>
-
 
