--- a/final-test-practice.html
+++ b/final-test-practice.html
@@ -110,7 +110,7 @@
                     <h2 class="page-title">Section 1: Causative & Causative-passive (B)</h2>
                     <p class="page-instructions">Rewrite the sentences using the specified form.</p>
                      <div class="question-block">
-                        <label for="q2a-causative">b. From:「学生はむずかしい漢字を習いました。」<br>→ 先生は</label>
+                        <label for="q2a-causative">b. From:「学生はむずかしい漢字を習いました。（先生が「習いなさい」と言ったからです）」<br>→ 先生は</label>
                         <input type="text" id="q2a-causative" class="answer-input" lang="ja" autocomplete="off">
                     </div>
                      <div class="question-block">
@@ -276,3 +276,4 @@
     <script src="final-test-practice.js"></script>
 </body>
 </html>
+
